--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.security.user.password=1234
 
 
 logging.level.bitronix=INFO
+logging.level.org.springframework.web=debug
+logging.level.org.springframework.security=debug
+#logging.level.org.hibernate=debug
 
 bitronix.tm.serverId=myapp
 bitronix.tm.logPart1Filename=bitronix1.log
